@@ -25,6 +25,7 @@
     lyrics.wikia.com
 17. Fix enabling of play queue navigation actions 'next' and 'previous'.
 18. Fix bus name of freedesktop.org's power management.
+19. Additionally call Inhibit() from org.freedesktop.login1.Manager.
 
 2.4.1
 -----
